language/move-model/tests/sources/intrinsic_type_err.exp
error: undeclared `0x42::M::NoSuchTypeParam`
  ┌─ tests/sources/intrinsic_type_err.move:4:33
  │
4 │         struct V1<E> :: [vector<NoSuchTypeParam>];
  │                                 ^^^^^^^^^^^^^^^

error: This type cannot be modeled as an intrinsic type
  ┌─ tests/sources/intrinsic_type_err.move:5:26
  │
5 │         struct V2<E> :: [&E];
  │                          ^^

error: This type cannot be modeled as an intrinsic type
  ┌─ tests/sources/intrinsic_type_err.move:6:23
  │
6 │         struct V3 :: [Foo];
  │                       ^^^

error: This type cannot be modeled as an intrinsic type
  ┌─ tests/sources/intrinsic_type_err.move:7:23
  │
7 │         struct V4 :: [|u64| address];
  │                       ^^^^^^^^^^^^^
